更新service